--- a/gallery-service/Dockerfile
+++ b/gallery-service/Dockerfile
@@ -10,7 +10,7 @@ FROM openjdk:17
 ARG JAR_FILE=build/libs/*.jar
 COPY --from=builder /usr/src/app/${JAR_FILE} app.jar
 #RUN apt-get update; apt-get -y install curl
-RUN microdnf update \
-   && microdnf install curl \
-    && microdnf install jq
+#RUN microdnf update \
+#   && microdnf install curl \
+#    && microdnf install jq
 ENTRYPOINT ["java", "-jar", "/app.jar"]
